(1) Add several timeouts to defer loading and avoid ui flickering (2) Add router transitions

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,31 +1,15 @@
-.enlaceListado{border: 2px outset;}
-.resalteListado{color:#28a54c;}
-.textoListado {font-size:small;}
+.enlaceListado{border: 2px outset}
+.resalteListado{color:#28a54c}
+.textoListado {font-size:small}
 
-.scale-in {-webkit-transform: scale(0.0);transform: scale(0.0);opacity: 0;}
+.scale-in {-webkit-transform: scale(0.0);transform: scale(0.0);opacity: 0}
 .scale-in.ng-enter,
-.scale-in > .ng-enter {
-  -webkit-transition: all cubic-bezier(.1, .7, .1, 1) 400ms;
+.scale-in > .ng-enter {-webkit-transition: all cubic-bezier(.1, .7, .1, 1) 400ms;
   transition: all cubic-bezier(.1, .7, .1, 1) 400ms;
 }
 .scale-in.ng-enter-active,
-.scale-in > .ng-enter-active {
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
-}
+.scale-in > .ng-enter-active {-webkit-transform: scale(1); transform: scale(1); opacity: 1}
 .scale-in.ng-leave,
-.scale-in > .ng-leave {
-  -webkit-transition: all ease-in-out 250ms;
-  transition: all ease-in-out 250ms;
-}
-.sombraInferior{
-  box-shadow: -1px 1px 5px #888888;
-}
-.cargando{
-  display: block;
-  text-align: center;
-  margin-top: 20%;
-  margin-left: auto;
-  margin-right:auto;
-}
+.scale-in > .ng-leave {-webkit-transition: all ease-in-out 250ms; transition: all ease-in-out 250ms}
+.sombraInferior{box-shadow: -1px 1px 5px #888888}
+.cargando{text-align: center; margin-top: 65%}
